--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,9 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.google.firebase:firebase-core:10.2.1'
+    compile "com.google.firebase:firebase-auth:9.0.2"
 
   }
 
 
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
