--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".SignupActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,6 +22,9 @@
         </activity>
         <activity android:name=".Insert_class" />
         <activity android:name=".Class_Info" />
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".ResetPasswordActivity"></activity>
+
         <activity android:name=".Insert_Assignment"></activity>
     </application>
 
